--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <li>
             <a href="syllabus.html">Course Syllabus</a>
         </li>
+         <li>
+            <a href="interactive_lesson.html">Interactive Lesson</a>
+        </li>
     </ul>
 
 </body>
