--- a/interactive_lesson.html
+++ b/interactive_lesson.html
@@ -229,3 +229,9 @@
 
         // Update progress on page load and on scroll
         window.onload = updateProgress;
+        window.onscroll = updateProgress;
+    </script>
+</div>
+
+</body>
+</html>
